# variant

./: CMakeLists.txt  LICENCE  README.md  main.cpp
app/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/include/gly/: type_traits  variant
